--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.31.0
   cloud_firestore: ^4.17.3  # Check for the latest version on pub.dev
   semicircle_indicator: ^1.1.1
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
