--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   firebase_core: ^2.31.0
+  firebase_auth: ^4.20.0
   cloud_firestore: ^4.17.3  # Check for the latest version on pub.dev
   semicircle_indicator: ^1.1.1
   timeline_tile: ^2.0.0
@@ -46,6 +47,19 @@ dependencies:
   path_provider: ^2.1.3
   uuid: ^4.4.0
 
+  flutter_chat_types: any
+  http: any
+  mime: any
+  equatable: any
+  meta: any
+  flutter_link_previewer: any
+  flutter_parsed_text: any
+  url_launcher: any
+  intl: any
+  photo_view: any
+  scroll_to_index: any
+  diffutil_dart: any
+  visibility_detector: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
