add friends ability.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   scroll_to_index: any
   diffutil_dart: any
   visibility_detector: any
+  searchfield: ^1.0.3
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
