--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   visibility_detector: any
   searchfield: ^1.0.3
   flutter_time_picker_spinner: ^2.0.0
+  bottom_picker: ^2.7.0
+  cupertino_date_textbox: ^1.0.3
+  omni_datetime_picker: ^1.1.0
 
 
 
