fixes ios location errors

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Your location is used to enhance event coordination and provide accurate event updates.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Your location is used to enhance event coordination and provide accurate event updates.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your location is used to enhance event coordination and provide accurate event updates.</string>
 </dict>
 </plist>
