--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   syncfusion_flutter_maps: ^25.2.7
   permission_handler: ^8.2.5
   geolocator: ^7.0.3
+  firebase_messaging: ^14.9.4
+  flutter_local_notifications: ^17.1.2
 
 
 
