--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,11 @@ dependencies:
   firebase_messaging: ^14.9.4
   flutter_local_notifications: ^17.1.2
 
+  google_maps_webservice: ^0.0.19
+
+dependency_overrides:
+  http: ^1.0.0
+
 
 
 dev_dependencies:
