--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,8 +78,6 @@ dependencies:
 dependency_overrides:
   http: ^1.0.0
 
-
-
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
@@ -110,7 +108,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.jpeg
-    - assets/rsvp_rally.png
+    - assets/rsvp_rally.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
