--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.1.3
   uuid: ^4.4.0
   intl: any
+  table_calendar: ^3.1.2
 
   flutter_chat_types: any
   http: any
